--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		gcc-arm-none-eabi \
 		binutils-arm-none-eabi \
 		libnewlib-arm-none-eabi \
+		zip unzip\
 	&& rm -rf /var/lib/apt/lists/*
 
 RUN pip install flake8
