Added python3. The image is not based on the python2 image any more, so now we install both python 2 and 3 on a debian image instead. Closes #2

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:2.7.10
+FROM buildpack-deps:jessie
 
 MAINTAINER Kristoffer Richardsson <kristoffer@bitcraze.io>
 
@@ -8,8 +8,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		libnewlib-arm-none-eabi \
 		zip unzip \
 		sdcc libftdi-dev \
+		python python-pip python3 python3-pip \
 	&& rm -rf /var/lib/apt/lists/*
 
 RUN pip install flake8
+RUN pip3 install flake8
 
 WORKDIR /module
