Closes #4. Added rake

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		zip unzip \
 		sdcc libftdi-dev \
 		python python-pip python3 python3-pip \
+		rake \
 	&& rm -rf /var/lib/apt/lists/*
 
 RUN pip install flake8
