--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -13,7 +13,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		rake \
 	&& rm -rf /var/lib/apt/lists/*
 
-RUN curl -sSL https://get.docker.com/ | sh
+# Install docker (see https://github.com/docker-library/docker)
+ENV DOCKER_BUCKET get.docker.com
+ENV DOCKER_VERSION 1.10.3
+ENV DOCKER_SHA256 d0df512afa109006a450f41873634951e19ddabf8c7bd419caeb5a526032d86d
+RUN curl -fSL "https://${DOCKER_BUCKET}/builds/Linux/x86_64/docker-$DOCKER_VERSION" -o /usr/local/bin/docker \
+	&& echo "${DOCKER_SHA256}  /usr/local/bin/docker" | sha256sum -c - \
+	&& chmod +x /usr/local/bin/docker
 
 RUN pip install flake8
 RUN pip3 install flake8
