--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,12 +2,10 @@ FROM buildpack-deps:jessie
 
 MAINTAINER Kristoffer Richardsson <kristoffer@bitcraze.io>
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-		gcc-arm-none-eabi \
-		gdb-arm-none-eabi \
-		binutils-arm-none-eabi \
-		libnewlib-arm-none-eabi \
+RUN dpkg --add-architecture i386 && apt-get update \
+    && apt-get install -y --no-install-recommends \
 		telnet \
+		libncurses5:i386 \
 		zip unzip \
 		sdcc libftdi-dev \
 		python python-pip python-wheel python-dev \
@@ -15,6 +13,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		rake \
 		python-numpy python-scipy python3-numpy python3-scipy \
 	&& rm -rf /var/lib/apt/lists/*
+
+RUN curl -fsSLO https://launchpad.net/gcc-arm-embedded/5.0/5-2016-q2-update/+download/gcc-arm-none-eabi-5_4-2016q2-20160622-linux.tar.bz2 \
+    && tar --strip-components=1 -xvjf gcc-arm-none-eabi-5_4-2016q2-20160622-linux.tar.bz2 -C /usr/local/
 
 ENV DOCKER_VERSION 1.12.0
 RUN curl -fsSLO https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz && tar --strip-components=1 -xvzf docker-1.12.0.tgz -C /usr/local/bin
