--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -27,14 +27,15 @@ RUN pip3 install flake8 pyusb==1.0.0b2 mock pyserial pre-commit tox
 ADD .pre-commit-config.yaml /dummy/.pre-commit-config.yaml
 RUN cd /dummy && git init && pre-commit run && cd && rm -rf /dummy
 
-# When running on linux with a non root user, there is no HOME directory why it
-# defaults to /. To make the behaviour uniform for all users the toolbels sets
-# HOME to /root for all users but we have to make it read and writeable for everyone
-RUN chmod -R 777 /root
-
 # /module is used for releases when we check out code in the toolbelt container
 # It is passed on to the builder with --volumes-from
 # Make sure it is accessible for all users
 RUN mkdir /module && chmod 777 /module
 
 WORKDIR /module
+
+# When running on linux with a non root user, there is no HOME directory why it
+# defaults to /. To make the behaviour uniform for all users set HOME
+# to /root for all users. We also have to make it read and writeable for everyone
+RUN chmod -R 777 /root
+ENV HOME=/root
