Seems to be a problem in using /root as HOME for everyone, let's create a new dir instead

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -20,6 +20,12 @@ RUN curl -fsSLO https://launchpad.net/gcc-arm-embedded/5.0/5-2016-q2-update/+dow
 ENV DOCKER_VERSION 1.12.0
 RUN curl -fsSLO https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz && tar --strip-components=1 -xvzf docker-${DOCKER_VERSION}.tgz -C /usr/local/bin
 
+# When running on linux with a non root user, there is no HOME directory why it
+# defaults to /. To make the behaviour uniform for all users create a new HOME
+# for all users. We also have to make it read and writeable for everyone
+RUN mkdir /new_home
+ENV HOME=/new_home
+
 RUN pip2 install flake8 pyusb==1.0.0b2 mock pyserial
 RUN pip3 install flake8 pyusb==1.0.0b2 mock pyserial pre-commit tox
 
@@ -30,12 +36,6 @@ RUN cd /dummy && git init && pre-commit run && cd && rm -rf /dummy
 # /module is used for releases when we check out code in the toolbelt container
 # It is passed on to the builder with --volumes-from
 # Make sure it is accessible for all users
-RUN mkdir /module && chmod 777 /module
+RUN mkdir /module && chmod 777 /module && chmod -R 777 /new_home
 
 WORKDIR /module
-
-# When running on linux with a non root user, there is no HOME directory why it
-# defaults to /. To make the behaviour uniform for all users set HOME
-# to /root for all users. We also have to make it read and writeable for everyone
-RUN chmod -R 777 /root
-ENV HOME=/root
