Added lang to make sure ruby opens files as UTF-8

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -33,6 +33,10 @@ RUN pip3 install flake8 pyusb==1.0.0b2 mock pyserial pre-commit tox
 ADD .pre-commit-config.yaml /dummy/.pre-commit-config.yaml
 RUN cd /dummy && git init && pre-commit run && cd && rm -rf /dummy
 
+# Set the locale to make ruby open text files as UTF-8 default
+# (Encoding.default_external). Required to make html-proofer handle UTF-8.
+ENV LANG C.UTF-8
+
 # /module is used for releases when we check out code in the toolbelt container
 # It is passed on to the builder with --volumes-from
 # Make sure it is accessible for all users
