Updated pre-commit config

--- a/src/.pre-commit-config.yaml
+++ b/src/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 -   repo: git://github.com/pre-commit/pre-commit-hooks
-    sha: 0b70e285e369bcb24b57b74929490ea7be9c4b19
+    rev: 0b70e285e369bcb24b57b74929490ea7be9c4b19
     hooks:
     -   id: autopep8-wrapper
     -   id: check-added-large-files
@@ -16,6 +16,6 @@
     -   id: flake8
     -   id: requirements-txt-fixer
 -   repo: git://github.com/asottile/reorder_python_imports
-    sha: 46f0b4b5d15f8405c0c70d071f25f50ac3965909
+    rev: 46f0b4b5d15f8405c0c70d071f25f50ac3965909
     hooks:
     -   id: reorder-python-imports
