--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -12,7 +12,7 @@ RUN dpkg --add-architecture i386 && apt-get update \
 		python3 python3-pip python3-wheel python3-dev python3-setuptools\
 		python-pip python-setuptools \
 		rake \
-		python3-numpy python3-scipy \
+		python3-scipy \
 		swig \
 		flex bison gperf \
 		python3-opencv \
@@ -33,7 +33,7 @@ ENV HOME=/new_home
 # Upgrade pip to avoid need for wheel compiliation
 RUN pip3 install --upgrade pip
 
-RUN pip3 install flake8==3.8.4 pyusb==1.0.0b2 mock pyserial pre-commit tox opencv-python==4.5.1.48 pyelftools pytest
+RUN pip3 install numpy=1.20.2 flake8==3.8.4 pyusb==1.0.0b2 mock pyserial pre-commit tox opencv-python==4.5.1.48 pyelftools pytest
 
 # Make pre-commit download and prepare all tools for python testing
 ADD .pre-commit-config.yaml /dummy/.pre-commit-config.yaml
